--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <img src="https://i.redd.it/f00trgqw7kbd1.jpeg" alt="miku">
     <input placeholder="whats the math question">
-    <button>Solve it with Miku!!!</button>
+    <button tag="d">Solve it with Miku!!!</button>
   </body>
 </html>
