--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <img src="https://i.redd.it/f00trgqw7kbd1.jpeg" alt="miku">
     <input placeholder="whats the math question">
-    <button tag="d">Solve it with Miku!!!</button>
+    <button id="d">Solve it with Miku!!!</button>
     <script href="script.js"></script>
   </body>
 </html>
