--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>miku dayo.</title>
   </head>
   <body>
-    <img src="https://i.redd.it/f00trgqw7kbd1.jpeg" alt="miku">
-    <input placeholder="whats the math question">
-    <button id="d">Solve it with Miku!!!</button>
-    <script href="script.js"></script>
+    <button id="d">Play Sound</button>
+
+    <script src="script.js"></script>
   </body>
 </html>
