--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>miku dayo.</title>
   </head>
   <body>
-    <button id="d">Play Sound</button>
+    <img src="https://i.redd.it/f00trgqw7kbd1.jpeg" alt="miku">
+    <input placeholder="whats the math question" id="q">
+    <button id="d">Solve it with Miku!!!</button>
 
     <script src="script.js"></script>
   </body>
